--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 0.2.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Changed HTML Structure
+- Removed unneeded components file 
 
 
 0.2.4 (2017-06-23)
