--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.2.6 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.2.5 (2018-07-23)
 ------------------
 
