--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,7 @@ Changelog
 0.2.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Formtemplate Remove unneeded fill-slot heaeer 
 
 
 0.2.5 (2018-07-23)
