--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.2.7 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 0.2.6 (2018-08-09)
 ------------------
 
